Issue clicking on stem of arrow gizmos to scale on axis #96357

Closed
opened 2022-03-12 00:31:46 +01:00 by Ajlan Altug · 7 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.77

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: 3.0.1

The video illustrates the problem clearly. Notice how in 3.0.1 when the mouse hovers over the gizmo handle, the handle activates as expected, ready for interaction. And then in 3.1, you'll see that the handle is only activated when the mouse pointer is exactly over the handle line, which makes it practically impossible to grab as you're working away (Notice how it flashes as the mouse moves laterally)

This only goes for the scale gizmo handles btw. Weirdly enough, only the Z axis handle seems to be broken. All Axis on Move and scale behave as expected.

3_1_Gizmo_Bug.mp4

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.77 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: 3.0.1 The video illustrates the problem clearly. Notice how in 3.0.1 when the mouse hovers over the gizmo handle, the handle activates as expected, ready for interaction. And then in 3.1, you'll see that the handle is only activated when the mouse pointer is exactly over the handle line, which makes it practically impossible to grab as you're working away (Notice how it flashes as the mouse moves laterally) This only goes for the scale gizmo handles btw. Weirdly enough, only the Z axis handle seems to be broken. All Axis on Move and scale behave as expected. [3_1_Gizmo_Bug.mp4](https://archive.blender.org/developer/F12922178/3_1_Gizmo_Bug.mp4)
Author

Added subscriber: @noc2

Added subscriber: @noc2
Ajlan Altug changed title from Transform Gizmo handle selection behavior acting strange and hinders workflow to SCALE Transform Gizmo handle selection behavior acting strange and hinders workflow 2022-03-12 16:16:22 +01:00

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report I can confirm.
0cb5eae9d0 is the first bad commit.

Thanks for the report I can confirm. 0cb5eae9d0617abedf745753c23061ddfcfd1416 is the first bad commit.
Campbell Barton self-assigned this 2022-03-15 09:19:21 +01:00

This issue was referenced by 18db6ed3c9

This issue was referenced by 18db6ed3c9d386bb178ab887604943298a9bac57

This issue was referenced by 49fc4449e7

This issue was referenced by 49fc4449e734842cc3ccd797e6ece73ea64f34e4
Campbell Barton changed title from SCALE Transform Gizmo handle selection behavior acting strange and hinders workflow to Issue clicking on stem of arrow gizmos to scale on axis 2022-03-15 09:59:30 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96357
No description provided.