Fix T96357: Issue clicking on stem of arrow gizmos to scale on axis

Caused by 0cb5eae9d0617abedf745753c23061ddfcfd1416 which restored
support for 3D depth when selecting gizmos - making it difficult
to select single lines drawn in front of other gizmos.
Previously the first hit was always used.

Resolve by using a margin around arrow stems when selecting
which was already done for 2D arrows.